# ecommerce_kafka

./: compose.yaml
inventory_service/: pyproject.toml
inventory_service/app/: main.py
notification_service/app/: email_template.html  main.py
order_service/app/: main.py
payment_service/: pyproject.toml
payment_service/app/: db.py  main.py  models.py  settings.py
payment_service/app/controller/: payment_controller.py
payment_service/app/routes/: payment_routes.py
product_service/: Dockerfile
product_service/app/: main.py
user_service/: .env  README.md  pyproject.toml
user_service/app/: main.py  settings.py
user_service/app/core/: crud.py  tokens.py
